--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,23 @@ form {
     width: 34%;
 }
 
+label {
+    display: block;
+    font-weight: bold;
+    margin: 10px;
+}
+
+input {
+    display: block;
+    margin: 3px;
+}
+
+#submit {
+    margin: 10px auto;
+    padding: 8px;
+    background-color:rgb(185, 66, 51);
+    font-size:1.3em;
+    border:1px solid #eee;
+    border-radius:10px;
+}
+
